# openapi.yaml
@@ -3,90 +3,37 @@
 
 openapi: 3.0.3
 info:
-    title: Auth API
+    title: Question API
     version: 0.0.1
 paths:
-    /api/v1/auth/admin/change-password:
-        post:
-            tags:
-                - Auth
-            operationId: Auth_AdminChangePassword
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/AdminChangePasswordReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/AdminChangePasswordResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/auth/admin/login:
-        post:
-            tags:
-                - Auth
-            operationId: Auth_AdminLogin
-            requestBody:
-                content:
-                    application/json:
-                        schema:
-                            $ref: '#/components/schemas/AdminLoginReq'
-                required: true
-            responses:
-                "200":
-                    description: OK
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/AdminLoginResp'
-                default:
-                    description: Default error response
-                    content:
-                        application/json:
-                            schema:
-                                $ref: '#/components/schemas/Status'
-    /api/v1/auth/student/info:
+    /api/v1/question/list:
         get:
             tags:
-                - Auth
-            operationId: Auth_StudentInfo
-            parameters:
-                - name: stuNo
-                  in: query
-                  schema:
-                    type: string
+                - Question
+            operationId: Question_ListQuestions
             responses:
                 "200":
                     description: OK
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/StudentInfoResp'
+                                $ref: '#/components/schemas/ListQuestionsResp'
                 default:
                     description: Default error response
                     content:
                         application/json:
                             schema:
                                 $ref: '#/components/schemas/Status'
-    /api/v1/auth/student/login:
+    /api/v1/question/update:
         post:
             tags:
-                - Auth
-            operationId: Auth_StudentLogin
+                - Question
+            operationId: Question_UpdateQuestions
             requestBody:
                 content:
                     application/json:
                         schema:
-                            $ref: '#/components/schemas/StudentLoginReq'
+                            $ref: '#/components/schemas/UpdateQuestionsReq'
                 required: true
             responses:
                 "200":
@@ -94,7 +41,7 @@ paths:
                     content:
                         application/json:
                             schema:
-                                $ref: '#/components/schemas/StudentLoginResp'
+                                $ref: '#/components/schemas/UpdateQuestionsResp'
                 default:
                     description: Default error response
                     content:
@@ -103,34 +50,6 @@ paths:
                                 $ref: '#/components/schemas/Status'
 components:
     schemas:
-        AdminChangePasswordReq:
-            type: object
-            properties:
-                username:
-                    type: string
-                oldPassword:
-                    type: string
-                newPassword:
-                    type: string
-        AdminChangePasswordResp:
-            type: object
-            properties:
-                message:
-                    type: string
-        AdminLoginReq:
-            type: object
-            properties:
-                username:
-                    type: string
-                password:
-                    type: string
-        AdminLoginResp:
-            type: object
-            properties:
-                message:
-                    type: string
-                token:
-                    type: string
         GoogleProtobufAny:
             type: object
             properties:
@@ -139,6 +58,29 @@ components:
                     description: The type of the serialized message.
             additionalProperties: true
             description: Contains an arbitrary serialized message along with a @type that describes the type of the serialized message.
+        ListQuestionsResp:
+            type: object
+            properties:
+                message:
+                    type: string
+                data:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/QuestionItem'
+        QuestionItem:
+            type: object
+            properties:
+                id:
+                    type: integer
+                    format: uint32
+                content:
+                    type: string
+                score:
+                    type: integer
+                    format: int32
+                sort:
+                    type: integer
+                    format: int32
         Status:
             type: object
             properties:
@@ -155,52 +97,17 @@ components:
                         $ref: '#/components/schemas/GoogleProtobufAny'
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
-        StudentData:
+        UpdateQuestionsReq:
             type: object
             properties:
-                studentNo:
-                    type: string
-                name:
-                    type: string
-                token:
-                    type: string
-        StudentDetailInfo:
-            type: object
-            properties:
-                id:
-                    type: integer
-                    format: uint32
-                name:
-                    type: string
-                sex:
-                    type: string
-                studentNo:
-                    type: string
-                idCardNo:
-                    type: string
-        StudentInfoResp:
+                questions:
+                    type: array
+                    items:
+                        $ref: '#/components/schemas/QuestionItem'
+        UpdateQuestionsResp:
             type: object
             properties:
                 message:
                     type: string
-                data:
-                    $ref: '#/components/schemas/StudentDetailInfo'
-        StudentLoginReq:
-            type: object
-            properties:
-                stuNo:
-                    type: string
-                cardNo:
-                    type: string
-                taskId:
-                    type: integer
-                    format: uint32
-        StudentLoginResp:
-            type: object
-            properties:
-                message:
-                    type: string
-                data:
-                    $ref: '#/components/schemas/StudentData'
 tags:
-    - name: Auth
+    - name: Question
